# GWSurrogate

./: .gitignore  README.md  mismatched.py  pyproject.toml  speedup_surrogate.py  surrogate_model.py
Notebooks/: greedy_basis_tutorial.ipynb  surrogate_build.ipynb  surrogate_model.hdf5
Refactored_Notebooks/: datagen.ipynb  surrogate_model.hdf5
eccentric_surrogate/: 0.ipynb  1.ipynb
modules/: constants.py  gw_utils.py
notebooks/: Eccentric_Harmonics.ipynb  ROM_10Hz.ipynb  ROM_Mass_scaling_in_GR.ipynb  eccentric_fd.ipynb  eccentric_harmonics_e_0.1.ipynb  eccentric_harmonics_e_0.5.ipynb  esigma_eccentric_harmonics.ipynb  esigma_eccentric_harmonics_within_ISCO.ipynb  esigma_eccentric_harmonics_within_ISCO_sarathi.ipynb  surrogate_model.ipynb  waveform_analysis.ipynb
notebooks/modules/: gw_utils.py
surrogw/dataset/: gen.py  loader.py
surrogw/modules/: constants.py  gw_utils.py
surrogw/surrogate/: QCircFD.py
